fix: update MunicipalitySearch component to use filters for municipalityId and adjust font sizes for improved readability

--- a/frontend/src/styles/MunicipalitySearch.module.css
+++ b/frontend/src/styles/MunicipalitySearch.module.css
@@ -1,5 +1,5 @@
 .MunicipalitySearch {
-    font-size: 0.8rem;
+    font-size: 1rem;
     border: 1px solid #4d6765;
 }
 
@@ -25,7 +25,7 @@
 .MunicipalityDropdownSearch li {
     padding: 8px 12px;
     cursor: pointer;
-    font-size: 0.7rem;
+    font-size: 1rem;
 }
 
 .MunicipalityDropdownSearch li:hover {
